<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>net_ft_diagnostic_broadcaster</name>
  <version>0.0.0</version>
  <description>Provides broadcaster for diagnostic data of the F/T sensor</description>

  <maintainer email="gbartyzel@hotmail.com">Grzegorz Bartyzel</maintainer>

  <license>BSD</license>

  <author>Grzegorz Bartyzel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
